2009-XX-XX:
    * version 2.2a1pre
    * IMPORTANT: shifted key notation now matches Vim's behaviour. E.g. <C-a>
      and <C-A> are equivalent, to map the uppercase character use <C-S-A>.
    * command-line options are now supported via the host application's
      -liberator option
    * add :i and :I for opening image location (in new tab)
    * add all.html to show all help sections in a single page - available via
      :help all
    * add ;c extended hint mode - open the context menu
    * add @: mapping - repeat the last Ex command
    * add \ mapping - toggle between rendered and source view

2009-05-21:
    * version 2.1
    * IMPORTANT: Default value of 'complete' has been changed from 'sfl' to 'slf'
    * massively speed up :open completions
    * TabMixPlus (and other tab extensions) should work much better now
      together with Vimperator unless you :set guioptions+=[nN]
    * remove 'preload' option. You can fake it by some custom javascript in your init file
    * add :frameonly
    * add :stopall
    * add :tabdo
    * add 'encoding'
    * add 'hintinputs'
    * add :silent
    * add $MY_VIMPERATORRC
    * add ' and " local marks
    * add "w" and "W" Normal mode mappings for symmetry with o/O and t/T
    * add :messclear
    * add 'maxitems'
    * as usual many small bug fixes

2009-03-28:
    * version 2.0
    * IMPORTANT: For compatibility with vim, guioptions=b has been renamed
      'B'. 'b' now represents the bottom scrollbar.
    * IMPORTANT: :set now sets multiple options, as in Vim. Spaces in values
      must be quoted or escaped.
    * IMPORTANT: Due to much improved autocompletion, changed default 'complete' option
      value to 'sfl', listing intelligent Firefox location bar results. Using 'b' or 'h'
      might cause problems/massive slowdowns, use with care!
    * IMPORTANT: AlwaysHint mode with ;F mode changed the semantics slightly.
    * IMPORTANT: command actions now take an args object, returned from